--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -84,12 +84,13 @@ body {
 
 #notification_area {
   position: absolute;
-  top: 0;
-  margin-top: 20px;
+  bottom: 0;
+  /* margin-bottom: 20px; */
 }
 
 .panel-notification {
 
-  opacity: 0.6;
-  width: 100px;
+  opacity: 0.8;
+  /* width: 100px; */
+  display: inline-block;
 }
